# RadCluster

./: .gitignore  CLAUDE.md  README.md  h2jupynb  requirements.txt
Creep/: CLAUDE.md
Creep/code/: creep.ipynb
Creep/cpp_utils/: CMakeLists.txt  ode_solver.cpp  parameters.h
Creep/input/: README.md
Creep/py_utils/: __init__.py  creep_plots.py  read_data.py
Eurofer/code/: EuroferRadiationMicro.ipynb
Eurofer/py_utils/: __init__.py  post_process.py  visualization.py
EuroferExperiments/: CLAUDE.md
EuroferExperiments/code/: EuroferMicro.ipynb  EuroferMicroData.ipynb
EuroferExperiments/input/: input_parameters.xlsx
EuroferExperiments/py_utils/: defect_production.py  input_data.py  rate_equations.py  simulation.py
Eurofer_CD/: CLAUDE.md  create_excel.py
Eurofer_CD/codes/: Eurofer_CD_4_windows.ipynb  eurofer_cd.ipynb
Eurofer_CD/cpp_utils/: CMakeLists.txt
Eurofer_CD/input/: CD_input.xlsx  input_parameters.xlsx
Eurofer_CD/py_utils/: input_data.py  post_process.py  reaction_rates.py
Expanded_Eurofer_CD/: CLAUDE.md  create_excel.py
Expanded_Eurofer_CD/codes/: Expanded_Eurofer_CD.ipynb  benchmark_woodbury.py  bias_study.py  calibrate.py  compare_window_modes.py  diagnose_stall.py  growth_diagnostic.py  param_sweep.py  solver.cpp  test_solver.py  zii_study.py
Expanded_Eurofer_CD/codes/Notebooks/: Expanded_Eurofer_CD.ipynb
Expanded_Eurofer_CD/codes/Python_Testing/: benchmark_woodbury.py  bias_study.py  calibrate.py  compare_window_modes.py  diagnose_stall.py  growth_diagnostic.py  mobility_sweep.py  param_sweep.py  test_solver.py  zii_study.py
Expanded_Eurofer_CD/cpp_utils/: CMakeLists.txt  parameters.h  rate_equations.cpp  rate_equations.h
Expanded_Eurofer_CD/input/: input_parameters.xlsx
Expanded_Eurofer_CD/py_utils/: __init__.py  bin_moment_rates.py  binding_energies.py  cpp_bridge.py  create_excel.py  defect_production.py  input_data.py  post_process.py  rate_equations.py  reaction_rates.py  simulation.py  visualization.py
Full_CD/: create_excel.py
Full_CD/codes/development/: CD.ipynb
Full_CD/py_utils/: input_data.py
Monomer_CD/: CLAUDE.md  create_excel.py
Monomer_CD/codes/: CD_4_mac.ipynb  CD_4_windows.ipynb
Monomer_CD/codes/development/: benchmark_ni_ext.py  cluster_dynamics_old.ipynb  test_window_solver.py
Monomer_CD/cpp_utils/: CMakeLists.txt  parameters.h  rate_equations.cpp  rate_equations.h
Monomer_CD/input/: input_parameters.xlsx
Monomer_CD/py_utils/: __init__.py  cpp_bridge.py  input_data.py  post_process.py  pre_process.py  reaction_rates.py  simulation.py  visualization.py
RadCluster_1_0/: CLAUDE.md
RadCluster_1_0/codes/: solver.cpp
RadCluster_1_0/codes/Notebooks/: RadCluster_1_0.ipynb
RadCluster_1_0/codes/Python_Testing/: benchmark_woodbury.py  bias_study.py  calibrate.py  compare_linsol.py  compare_window_modes.py  diagnose_stall.py  growth_diagnostic.py  mobility_sweep.py  param_sweep.py  param_sweep_results.json  test_lapack_omp_small.py  test_solver.py  zii_study.py
RadCluster_1_0/cpp_utils/: CMakeLists.txt  parameters.h  rate_equations.cpp  rate_equations.h
RadCluster_1_0/input/: input_parameters.xlsx
RadCluster_1_0/input/archive/: 111_fraction.xlsx
RadCluster_1_0/py_utils/: __init__.py  bin_moment_rates.py  cpp_bridge.py  create_excel.py  input_data.py  post_process.py  rate_equations.py  reaction_rates.py  simulation.py  visualization.py
RadCluster_2_0/: CLAUDE.md
RadCluster_2_0/codes/Notebooks/: RadCluster_2_0.ipynb
RadCluster_2_0/codes/Python_Testing/: benchmark_woodbury.py  bias_study.py  calibrate.py  calibrate_loop_conversion.py  check_binmoment_loop100.py  check_coalescence_product_population.py  check_eurofer_rag.py  check_he_conservation.py  check_loop_conversion_conservation.py  compare_linsol.py  (+13 more)
RadCluster_2_0/cpp_utils/: CMakeLists.txt
RadCluster_2_0/cpp_utils/core/: parameters.h  rate_equations.h  rhs_dispatch.cpp  solver.cpp  sparse_jacobian.cpp  sparse_jacobian.h
RadCluster_2_0/cpp_utils/materials/eurofer97/: rate_kernels.cpp
RadCluster_2_0/input/: input_parameters.xlsx
RadCluster_2_0/py_utils/: __init__.py  bin_moment_rates.py  binding_energies.py  cpp_bridge.py  create_excel.py  input_data.py  loop_burgers_fraction.py  post_process.py  rate_equations.py  reaction_rates.py  simulation.py  visualization.py
RadCluster_2_1/: CLAUDE.md
RadCluster_2_1/cpp_utils/: CMakeLists.txt
RadCluster_2_1/cpp_utils/core/: parameters.h  rate_equations.h  rhs_dispatch.cpp  solver.cpp  sparse_jacobian.h
RadCluster_2_1/cpp_utils/materials/eurofer97/: rate_kernels.cpp
RadCluster_2_1/input/: input_parameters.xlsx
RadCluster_2_1/py_utils/: __init__.py  bin_moment_rates.py  cpp_bridge.py  create_excel.py  defect_production.py  input_data.py  loop_energetics.py  post_process.py  rate_equations.py  reaction_rates.py  simulation.py  visualization.py
Reduced_CD/: CLAUDE.md
Reduced_CD/code/: ClusterDynamics.ipynb
Reduced_CD/cpp_utils/: CMakeLists.txt  parameters.h  rate_equations.cpp  rate_equations.h
Reduced_CD/py_utils/: __init__.py  input_data.py  post_process.py  rate_equations.py  reaction_rates.py  simulation.py  visualization.py
Zr_RadCluster_1_0/cpp_utils/: rate_equations.cpp  sparse_jacobian.cpp
Zr_RadCluster_1_0/py_utils/: create_excel.py  defect_production.py  post_process.py  rate_equations.py
archive/Eurofer_CD/: CLAUDE.md
archive/RadCluster_1_0/: CLAUDE.md
docs/: CLAUDE.md  Hoffman2_Guide.md
docs/Database/: FerriticSteels_RadiationDatabase_Combined.xlsx  InterstitialLoop.xlsx  Void.xlsx
docs/Formulation/: Abstract_and_Introduction.bib  Abstract_and_Introduction.tex  Cluster_Dynamics.tex  Cuda_C++_Plan.md  EuroRefs.bib  Jacobian_Preconditioner.tex  RadCluster_AI_Calibration_Adaptive_Solver_Roadmap.md  Xolotl_vs_RadCluster_comparison.tex  bin_moments.tex  generalized_defect_cluster_dynamics_section.tex  loop_111_to_100_conversion.bib  loop_111_to_100_conversion.tex  loop_network_loss.bib  loop_network_loss.tex  radcluster_2_1_RIS_plan.bib  radcluster_2_1_RIS_plan.tex  rate_equations_merged_12.tex  rate_equations_merged_13.tex  simulation_methodology.tex
(+90 files in other folders)
